--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,26 @@
 server.port=8080
+
 # Ensure application is run in Vaadin 14/npm mode
-vaadin.compatibilityMode = false
+vaadin.compatibilityMode=false
+
 # Workaround for https://github.com/vaadin/flow/issues/5947
 spring.devtools.restart.additional-exclude=META-INF/VAADIN/config/**
 
-logging.level.org.atmosphere = warn
+# This is a workaround for https://github.com/vaadin/spring/issues/381
+spring.servlet.multipart.enabled=false
+logging.level.org.atmosphere=warn
+
+# Data Source
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=admin007!
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+# JPA / Hibernate
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
