add login with spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8080
 
-# Ensure application is run in Vaadin 14/npm mode
+# Vaadin
 vaadin.compatibilityMode=false
+vaadin.urlMapping=/*
 
 # Workaround for https://github.com/vaadin/flow/issues/5947
 spring.devtools.restart.additional-exclude=META-INF/VAADIN/config/**
